objects/External_CI_Job_Result__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>IF(NOT(ISBLANK( End_Time__c )),(End_Time__c - Start_Time__c)*24*60*60,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (in seconds)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environment</label>
        <referenceTo>Environment__c</referenceTo>
        <relationshipLabel>External CI Job Results</relationshipLabel>
        <relationshipName>External_CI_Job_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_CI_Job_ID__c</fullName>
        <label>External CI Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_CI_Job__c</fullName>
        <label>External CI Job</label>
        <referenceTo>External_CI_Job__c</referenceTo>
        <relationshipLabel>External CI Job Results</relationshipLabel>
        <relationshipName>External_CI_Job_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Job_URL_Link__c</fullName>
        <formula>if(ISBLANK(Job_URL__c), 
  &quot;&quot;,
  HYPERLINK(Job_URL__c, &quot;View in &quot;&amp;TEXT( External_CI_Job__r.External_CI_Setting__r.CI_Tool__c ))
)</formula>
        <label>Job URL Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_URL__c</fullName>
        <label>Job URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Timed out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>User_Story__c</referenceTo>
        <relationshipLabel>External CI Job Results</relationshipLabel>
        <relationshipName>External_CI_Job_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>External CI Job Result</label>
    <nameField>
        <displayFormat>XJR-{00000}</displayFormat>
        <label>External CI Job Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External CI Job Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>